2008-01-14  Chris Toshok <toshok@ximian.com> 

	* Metadata.cs: add GetLiteralValue() abstract method to CompField.
	* InfoManager.cs: wex might be null here since we're in the else branch, so
	  don't look in it.
	* MasterMetadata.cs: implement MasterField.GetLiteralField.
	* CecilMetadata.cs: Implement CecilField.GetLiteralValue.
	* CompareContext.cs: check literal field values (fixes enum comparing)

2008-01-13  Chris Toshok <toshok@ximian.com> 

	* InfoManager.cs: fix this obvious brokenness.

2008-01-13  Chris Toshok <toshok@ximian.com> 

	* CecilMetadata.cs: only include the generic parameters of the method in the
	  beautified version of the method name.

2008-01-11  Chris Toshok <toshok@ximian.com> 

	* CecilMetadata.cs: Fix explicit interface definitions of events.

2008-01-11  Chris Toshok <toshok@ximian.com> 

	* InfoManager.cs: add support for IfModifiedSince to the download logic, so
	  we'll redownload a masterinfo .tar.gz file automatically if there's a
	  newer one on the server.

2008-01-11  Chris Toshok <toshok@ximian.com> 

	* MasterMetadata.cs: deal with a null masterinfo.
	* Masterinfo.cs: deal with empty masterinfo files (with no assemblies)
	  correctly.

2008-01-03  Miguel de Icaza  <miguel@novell.com>

	* InfoManager.cs: For people that are abusing XDG_DATA_HOME,
	ignore their setting.

2008-01-09  Chris Toshok <toshok@ximian.com> 

	* Metadata.cs: add abstract bool ThrowsNotImplementedException method to
	  CompMethod.
	* MasterMetadata.cs: always return false from ThrowsNotImplementedException,
	  since we have no idea (but can assume it doesn't, since most of our
	  masterinfos are generated from MS source).
	* CecilMetadata.cs: Copy MoMA's implementation of
	  ThrowsNotImplementedException
	* CompareContext.cs: for two methods, check to see if the target throws
	  NotImplementedException when the reference doesn't.

2008-01-03  Miguel de Icaza <miguel@novell.com> 
