@@ -55,6 +55,7 @@
     <File name="Config.cs" subtype="Code" buildaction="Compile" />
     <File name="CustomCompare.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/GuiCompare.CustomCompare.cs" subtype="Code" buildaction="Compile" />
+    <File name="cm/mn.png" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
